<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent" 
	android:layout_width="fill_parent"
	android:fillViewport="true"> 
	
<LinearLayout
	android:id="@+id/defaults_layout" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent" 
	android:orientation="vertical"
	>

<!-- TAX -->
<RelativeLayout 
	android:id="@+id/tax_layout" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
<TextView 
	android:id="@+id/tax_label" 
	android:layout_height="wrap_content" 
	android:layout_width="wrap_content" 
	android:layout_alignParentLeft="true" 
	android:layout_alignBaseline="@+id/tax_percent_entry"
	android:text="@string/tax_label"
	/>
<EditText
	android:id="@+id/tax_percent_entry"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_centerHorizontal="true"
	android:background="@android:drawable/editbox_background" 
	android:inputType="number|numberDecimal"
	android:gravity="right"
	android:selectAllOnFocus="true"
	android:nextFocusDown="@+id/tax_amount_entry"
	android:nextFocusUp="@+id/tax_amount_entry"
	android:textColor="#000000"/>
<TextView
	android:id="@+id/percent_symbol_label"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:layout_toRightOf="@+id/tax_percent_entry" 
    android:layout_alignBaseline="@+id/tax_percent_entry"
    android:text="@string/percent_symbol"
    />
</RelativeLayout>

<!-- PLANNED TIP -->
<RelativeLayout 
	android:id="@+id/planned_tip_layout" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
<TextView 
	android:id="@+id/planned_tip_label" 
	android:layout_height="wrap_content" 
	android:layout_width="wrap_content" 
	android:layout_alignParentLeft="true" 
	android:layout_alignBaseline="@+id/planned_tip_percent_entry"
	android:text="@string/planned_tip_label"
	/>
<EditText
	android:id="@+id/planned_tip_percent_entry"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_centerHorizontal="true"
	android:background="@android:drawable/editbox_background" 
	android:inputType="number|numberDecimal"
	android:gravity="right"
	android:selectAllOnFocus="true"
	android:textColor="#000000"/>
<TextView
	android:id="@+id/planned_tip_percent_entry_label"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/planned_tip_percent_entry"
    android:layout_toRightOf="@+id/planned_tip_percent_entry"
    android:text="@string/percent_symbol"
    />
</RelativeLayout>

<!-- ROUND UP TO AMOUNT -->
<RelativeLayout 
	android:id="@+id/round_up_to_nearest_layout" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
<TextView
	android:id="@+id/round_up_to_nearest_label"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_alignParentLeft="true"
    android:layout_alignBaseline="@+id/round_up_to_nearest_spinner"
    android:text="@string/round_up_to_nearest_text"
    />
<Spinner 
	android:id="@+id/round_up_to_nearest_spinner"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
	android:layout_marginRight="10sp"
	android:prompt="@string/round_up_to_nearest_text"
    />
</RelativeLayout>

</LinearLayout>
</ScrollView>